<resources>
    <string name="app_name">CryptopiaTracker</string>

    <string name="title_exchange_btc">BTC</string>
    <string name="title_exchange_usdt">USDT</string>
    <string name="title_exchange_nzdt">NZDT</string>
    <string name="title_exchange_ltc">LTC</string>
    <string name="title_exchange_doge">DOGE</string>

    <string name="action_retry">Retry</string>
    <string name="action_search">Search</string>
    <string name="action_donate">Donate</string>

    <string name="label_settings">Settings</string>
</resources>
